Team Name change

--- a/bino/index.html
+++ b/bino/index.html
@@ -380,7 +380,7 @@
                                                 <img src="assets/images/ramesh_logo.png" alt="" />
                                             </div>
                                             <div class="single_team_text_overlay">
-                                                <h4>SEMF UCUK</h4>
+                                                <h4>RAMESH THUMU</h4>
                                                 <p>FOUNDER</p>
                                                 <div class="team_overlay_socail">
                                                     <a href=""><i class="fa fa-facebook"></i></a>
