--- a/bino/index.html
+++ b/bino/index.html
@@ -212,9 +212,9 @@
                                     <div class="pricing_body">
                                         <ul>
                                             <li>Unlimited Storage</li>
-                                            <li>Day-Light Tech Support</li>
+                                            <li>24x7 Tech Support</li>
                                             <li>Detailed Analytics Reports</li>
-                                            <li>Upto 100 Users</li>
+                                            <li>10 - 100 Users</li>
                                         </ul>
                                         <a href="" class="btn btn-md">MORE DETAILS</a>
                                         <a href="" class="btn btn-md">SIGN UP</a>
@@ -237,7 +237,7 @@
                                             <li>Unlimited Storage</li>
                                             <li>24x7 Tech Support</li>
                                             <li>Detailed Analytics Reports</li>
-                                            <li> 100+ Users</li>
+                                            <li>100+ Users</li>
                                         </ul>
                                         <a href="" class="btn btn-md">MORE DETAILS</a>
                                         <a href="" class="btn btn-md">SIGN UP</a>
@@ -574,8 +574,8 @@
                                                             <div class="single_info_text">
                                                                 <h3>OUR ADDRESS</h3>
                                                                 <h3>Thoughtwave Software & Solutions</h3>
-                                                          <h4>1444 N Farnsworth Avenue Suite 302,
-                                                           Aurora,IL-60505,USA</h4>
+                                                          <h4>1444 N Farnsworth Avenue, Suite 302
+                                                           Aurora, IL 60505, USA</h4>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -592,7 +592,7 @@
                                                         <div class="single_contact_info">
                                                             <div class="single_info_text">
                                                                 <h3>EMAIL US</h3>
-                                                                <h4>contactus@thoughtwave.com</h4>
+                                                                <h4>contactus@thoughtwavesoft.com</h4>
                                                             </div>
                                                         </div>
                                                     </div>
