Changed Font-family for contact section

--- a/bino/index.html
+++ b/bino/index.html
@@ -429,7 +429,7 @@
                                     </div>
                                     
                                     
-                                    <div class="col-sm-3 col-xs-12">
+                                  <!--  <div class="col-sm-3 col-xs-12">
                                         <div class="single_team_content">
                                             <div class="single_team_img">
                                                 <img src="assets/images/ramesh_logo.png" alt="" />
@@ -445,9 +445,9 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div>-->
 
-                                    <div class="col-sm-3 col-xs-12">
+                                 <!--   <div class="col-sm-3 col-xs-12">
                                         <div class="single_team_content">
                                             <div class="single_team_img">
                                                 <img src="assets/images/ramesh_logo.png" alt="" />
@@ -463,7 +463,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div> <!-- End of col-sm-4 -->
+                                    </div>--> <!-- End of col-sm-4 -->
                                 </div>
 
                             </div><!-- End of main team contant -->
